Fixed a bug with scrollbar

--- a/src/_start_display.scss
+++ b/src/_start_display.scss
@@ -35,6 +35,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    margin-top: 1rem;
   }
 }
 
