--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ body {
   color: $textColor;
   font-family: "Inter", sans-serif;
   background-color: color.adjust($background, $lightness: 10%);
+  overflow: hidden;
 
   @include tablet-and-bigger {
     display: flex;
@@ -36,7 +37,8 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
   &::-webkit-scrollbar {
-    display: none;
+    width: 0;
+    height: 0;
   }
 
   min-height: 100vh;
